# real-car-adas-monitor

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  generate_obd_data.py
data/: obd_data.csv
models/: driver_classifier.onnx  driver_classifier.onnx.data  normalization_params.json
src/: dashboard.cpp  dashboard.h  main.cpp  obd_parser.cpp  obd_parser.h  onnx_classifier.cpp  onnx_classifier.h
tests/: test_obd_parser.cpp
